--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -33,13 +33,14 @@
                 android:layout_width="@dimen/_80sdp"
                 android:layout_height="@dimen/_80sdp" />
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="@dimen/_20sdp"
-                android:layout_height="@dimen/_20sdp"
+            <ImageView
+                android:id="@+id/ivEditPhoto"
+                android:layout_width="@dimen/_25sdp"
+                android:layout_height="@dimen/_25sdp"
                 android:layout_gravity="right|top"
-                android:layout_margin="@dimen/_3sdp"
                 android:background="@drawable/white_cicle"
                 android:onClick="@{()->ivProfileImg.performClick()}"
+                android:padding="@dimen/_3sdp"
                 android:src="@drawable/ic_edit_round_black" />
 
         </FrameLayout>
