--- a/app/src/main/res/layout/fragment_amenities.xml
+++ b/app/src/main/res/layout/fragment_amenities.xml
@@ -595,7 +595,7 @@
                 android:textAllCaps="false"
                 android:textColor="@color/colorRed"
                 android:textSize="18sp"
-                android:visibility="@{(viewOnly || isUpdate) ? View.GONE : View.VISIBLE}" />
+                android:visibility="@{viewOnly ? View.GONE : View.VISIBLE}" />
 
         </LinearLayout>
     </ScrollView>
