--- a/app/src/main/res/layout/fragment_bank_details.xml
+++ b/app/src/main/res/layout/fragment_bank_details.xml
@@ -634,7 +634,7 @@
                     android:textAllCaps="false"
                     android:textColor="@color/colorRed"
                     android:textSize="18sp"
-                    android:visibility="@{(isUpdate||viewOnly) ? View.GONE : View.VISIBLE}"
+                    android:visibility="@{viewOnly ? View.GONE : View.VISIBLE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
