--- a/app/src/main/res/layout/fragment_other_amenities.xml
+++ b/app/src/main/res/layout/fragment_other_amenities.xml
@@ -481,7 +481,7 @@
                 <FrameLayout
                     android:id="@+id/flBarberImg"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_150sdp"
+                    android:layout_height="@dimen/_110sdp"
                     android:background="@drawable/grey_fill_bg"
                     android:clickable="@{!viewOnly}">
 
@@ -490,8 +490,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:orientation="vertical"
-                        android:padding="20dp">
+                        android:orientation="vertical">
 
                         <androidx.appcompat.widget.AppCompatImageView
                             android:layout_width="@dimen/_50sdp"
@@ -502,9 +501,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginVertical="10dp"
-                            android:layout_marginStart="@dimen/_5sdp"
                             android:fontFamily="@font/opensans_regular"
-                            android:text="@string/upload_pics"
+                            android:text="@string/upload_photos"
                             android:textColor="@color/black"
                             android:textSize="16sp" />
 
