--- a/app/src/main/res/layout/fragment_sleeping_amenities.xml
+++ b/app/src/main/res/layout/fragment_sleeping_amenities.xml
@@ -55,6 +55,7 @@
                         android:id="@+id/rgBedCharpai"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:checkedButton="@id/rbBedCharpaiNo"
                         android:orientation="horizontal">
 
                         <RadioButton
@@ -139,7 +140,6 @@
                         android:id="@+id/llSleepingAmanPhoto"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:clickable="@{!viewOnly}"
                         android:gravity="center"
                         android:orientation="vertical"
                         android:padding="20dp">
@@ -189,6 +189,7 @@
                         android:id="@+id/rgFan"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:checkedButton="@id/rbFanNo"
                         android:orientation="horizontal">
 
                         <RadioButton
@@ -228,6 +229,7 @@
                         android:id="@+id/rgCooler"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:checkedButton="@id/rbCoolerNo"
                         android:orientation="horizontal">
 
                         <RadioButton
@@ -317,6 +319,7 @@
                         android:id="@+id/rgOpen"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:checkedButton="@id/rbOpenNo"
                         android:orientation="horizontal">
 
                         <RadioButton
@@ -356,6 +359,7 @@
                         android:id="@+id/rgHotColdWater"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:checkedButton="@id/rbHotWaterNo"
                         android:orientation="horizontal">
 
                         <RadioButton
