--- a/app/src/main/res/layout/fragment_food_amenities.xml
+++ b/app/src/main/res/layout/fragment_food_amenities.xml
@@ -286,7 +286,8 @@
                     android:clickable="@{!viewOnly}"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:padding="20dp">
+                    android:padding="20dp"
+                    android:visibility="@{viewOnly ? View.GONE : View.VISIBLE}">
 
                     <ImageView
                         android:layout_width="@dimen/_50sdp"
