--- a/app/src/main/res/layout/fragment_security_amenities.xml
+++ b/app/src/main/res/layout/fragment_security_amenities.xml
@@ -333,7 +333,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/grey_fill_bg"
                     android:clickable="@{!viewOnly}"
-                    android:visibility="@{rbIndoorCameraYes.checked ? View.VISIBLE : View.GONE}">
+                    android:visibility="@{(rbIndoorCameraYes.checked &amp;&amp; !viewOnly) ? View.VISIBLE : View.GONE}">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -406,9 +406,9 @@
 
                         <RadioButton
                             android:id="@+id/rbOutdoorCameraNo"
-                            android:clickable="@{!viewOnly}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:text="@string/no" />
 
@@ -425,17 +425,17 @@
                             android:id="@+id/rb12OutCam"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:clickable="@{!viewOnly}"
                             android:padding="@dimen/_10sdp"
                             android:tag="1"
-                            android:clickable="@{!viewOnly}"
                             android:text="@string/_1_2" />
 
                         <RadioButton
                             android:id="@+id/rb25OutCam"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:padding="@dimen/_10sdp"
                             android:clickable="@{!viewOnly}"
+                            android:padding="@dimen/_10sdp"
                             android:tag="2"
                             android:text="@string/_2_5" />
 
@@ -443,8 +443,8 @@
                             android:id="@+id/rb5AboveOutCam"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:padding="@dimen/_10sdp"
                             android:clickable="@{!viewOnly}"
+                            android:padding="@dimen/_10sdp"
                             android:tag="3"
                             android:text="@string/above_5" />
 
@@ -506,8 +506,8 @@
                     android:background="@drawable/primary_color_btn_selector"
                     android:text="@{isUpdate ? context.getString(R.string.update) : context.getString(R.string.save)}"
                     android:textAllCaps="false"
-                    android:textSize="18sp"
                     android:textColor="@color/white"
+                    android:textSize="18sp"
                     android:visibility="@{viewOnly ? View.GONE : View.VISIBLE}" />
 
             </LinearLayout>
