--- a/app/src/main/res/layout/fragment_washroom_amenities.xml
+++ b/app/src/main/res/layout/fragment_washroom_amenities.xml
@@ -171,6 +171,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:clickable="@{!viewOnly}"
+                        android:visibility="@{viewOnly ? View.GONE : View.VISIBLE}"
                         android:gravity="center"
                         android:orientation="vertical"
                         android:padding="20dp">
