--- a/app/src/main/res/layout/fragment_dhaba_success.xml
+++ b/app/src/main/res/layout/fragment_dhaba_success.xml
@@ -18,13 +18,14 @@
         android:background="@color/white"
         android:gravity="center_horizontal"
         android:orientation="vertical"
+        android:paddingHorizontal="@dimen/_10sdp"
         android:paddingVertical="@dimen/_20sdp">
 
         <ImageView
             android:id="@+id/ivTick"
-            android:layout_width="@dimen/_70sdp"
-            android:layout_height="@dimen/_70sdp"
-            android:layout_marginTop="@dimen/_50sdp"
+            android:layout_width="@dimen/_65sdp"
+            android:layout_height="@dimen/_65sdp"
+            android:layout_marginTop="@dimen/_75sdp"
             android:src="@drawable/ic_verified" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -45,7 +46,7 @@
             android:background="@drawable/grey_roundcorners_dhaba_id"
             android:fontFamily="@font/opensans_bold"
             android:gravity="center"
-            android:padding="10dp"
+            android:paddingVertical="15dp"
             android:text="@{dhabaId}"
             android:textColor="@color/black"
             android:textSize="20sp" />
@@ -64,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_46sdp"
             android:layout_marginHorizontal="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_30sdp"
             android:background="@drawable/btn_primary"
             android:fontFamily="@font/opensans_bold"
             android:text="@string/view_list"
