--- a/app/src/main/res/layout/activity_new_dhaba.xml
+++ b/app/src/main/res/layout/activity_new_dhaba.xml
@@ -40,7 +40,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@drawable/screen_background_gradient"
             android:elevation="@dimen/_4sdp"
             android:minHeight="?attr/actionBarSize"
             android:theme="@style/ToolbarTheme">
@@ -58,7 +58,7 @@
                     android:layout_centerHorizontal="true"
                     android:fontFamily="@font/opensans_semibold"
                     android:gravity="start"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="16sp"
                     tools:text="Title" />
             </RelativeLayout>
