--- a/app/src/main/res/drawable/ic_close_black.xml
+++ b/app/src/main/res/drawable/ic_close_black.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="20.953"
     android:viewportHeight="20.953">
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="#FFFFFF"
       android:pathData="M20.954,2.096l-2.1,-2.1L10.477,8.377 2.096,0l-2.1,2.1L8.377,10.477 0,18.858l2.1,2.1L10.477,12.577l8.381,8.381 2.1,-2.1L12.577,10.477Z"/>
 </vector>
