--- a/app/src/main/res/layout/activity_common.xml
+++ b/app/src/main/res/layout/activity_common.xml
@@ -25,8 +25,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/screen_background_gradient"
             android:theme="@style/ToolbarTheme"
-            android:background="@color/white"
             android:elevation="@dimen/_4sdp">
 
             <RelativeLayout
@@ -41,7 +41,7 @@
                     android:layout_centerHorizontal="true"
                     android:gravity="start"
                     android:text="@{title}"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:visibility="@{(title.empty || title == null) ? View.GONE : View.VISIBLE}"
                     tools:text="Title" />
 
